# liike

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.gemini/: implementation-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnimationsPanel.tsx  BackgroundModal.tsx  CameraStylePanel.tsx  CreativeAngles.tsx  DeviceRenderer.tsx  FilterPreview.tsx  Header.tsx  LayoutPicker.tsx  LayoutsPanel.tsx  MediaContainer.tsx  MockupSelector.tsx  RenderControls.tsx  RenderOverlay.tsx  RenderStage.tsx  ShadowGlow.tsx  ShadowGlowPanel.tsx  SidePanel.tsx  SidebarLeft.tsx  SidebarRight.tsx  TextEditor.tsx  TextOverlay.tsx  Timeline.tsx  TimelinePanel.tsx  TopBar.tsx  Workarea.tsx
src/constants/: animations.ts  devices.ts  framePresets.ts  layoutAnimationPresets.ts  layouts.ts  stylePresets.ts  styles.ts  textAnimations.ts  ui.ts
src/hooks/: useAnimationManager.ts  useFontLoader.ts  useMediaUpload.ts  useRenderLoop.ts  useStreamingRender.ts  useTimelinePlayback.ts
src/services/: fontService.ts
src/store/: favoritesStore.ts  renderStore.ts  timelineStore.ts
src/utils/: animationHelpers.ts  mediaUtils.ts  renderUtils.ts
src/workers/: frameWorker.ts
stitch_shots.so_clone_main_editor_timeline/shots.so_clone_-_main_editor_&_timeline_1/: code.html
stitch_shots.so_clone_main_editor_timeline/shots.so_clone_-_main_editor_&_timeline_2/: code.html
(+28 files in other folders)
