[package]
name = "liike"
version = "0.1.0"
description = "Liike Tauri app"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "liike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "liike"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.4"
